--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-
+MONGO_URL=mongodb+srv://khadijahaabubakar:O0AewUVvdWFrjV5r@freelancing-app.d9pigtv.mongodb.net/?retryWrites=true&w=majority
+JWT_KEY=0bfb324e73ec733ebd98124d1d0964d4
